--- a/githublist/package.json
+++ b/githublist/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
@@ -16,9 +16,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
+    "react-github-btn": "^1.2.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -69,6 +71,8 @@
     "@storybook/preset-create-react-app": "^4.0.1",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^17.0.2",
     "webpack": "^5.69.1"
   }
 }
