--- a/githublist/package.json
+++ b/githublist/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://srl132.github.io/github_repositories_search",
   "name": "githublist",
   "version": "0.1.0",
   "private": true,
@@ -26,6 +27,8 @@
   },
   "scripts": {
     "start": "react-dotenv && react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
